<?xml version="1.0" encoding="utf-8"?>
<!--                                                                          -->
<!-- Copyright 2016 - 2020 Mirko Raner                                        -->
<!--                                                                          -->
<!-- Licensed under the Apache License, Version 2.0 (the "License");          -->
<!-- you may not use this file except in compliance with the License.         -->
<!-- You may obtain a copy of the License at                                  -->
<!--                                                                          -->
<!--      http://www.apache.org/licenses/LICENSE-2.0                          -->
<!--                                                                          -->
<!-- Unless required by applicable law or agreed to in writing, software      -->
<!-- distributed under the License is distributed on an "AS IS" BASIS,        -->
<!-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. -->
<!-- See the License for the specific language governing permissions and      -->
<!-- limitations under the License.                                           -->
<!--                                                                          -->
<project
 xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

 <modelVersion>4.0.0</modelVersion>
 <groupId>pro.projo</groupId>
 <artifactId>projo-parent</artifactId>
 <version>1.2.0-SNAPSHOT</version>
 <name>Projo Parent POM</name>
 <url>https://github.com/raner/projo</url>
 <packaging>pom</packaging>

 <description>
  Projo is a Java library for reducing the amount of boiler-plate code that is necessary for
  implementing simple model objects and DTOs (including Value Objects and "POJOs").
 </description>

 <licenses>
  <license>
   <name>Apache License, Version 2.0</name>
   <url>http://www.apache.org/licenses/LICENSE-2.0</url>
  </license>
 </licenses>

 <developers>
  <developer>
   <name>Mirko Raner</name>
   <email>mirko@raner.ws</email>
  </developer>
 </developers>

 <properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 </properties>

 <scm>
  <url>https://github.com/raner/projo</url>
  <connection>scm:git:https://github.com/raner/projo.git</connection>
  <developerConnection>scm:git:https://github.com/raner/projo.git</developerConnection>
 </scm>

 <distributionManagement>
  <snapshotRepository>
   <id>central</id>
   <url>https://oss.sonatype.org/content/repositories/snapshots</url>
  </snapshotRepository>
  <repository>
   <id>central</id>
   <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
  </repository>
 </distributionManagement>

 <modules>
  <module>projo</module>
  <module>projo-template-annotation</module>
  <module>projo-template-generation</module>
  <module>projo-template-configuration</module>
  <module>projo-runtime-code-generation</module>
  <module>projo-jackson</module>
  <module>projo-jax-rs</module>
  <module>projo-template-generation-test</module>
 </modules>

 <build>
  <plugins>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-source-plugin</artifactId>
    <version>3.0.1</version>
    <executions>
     <execution>
      <id>attach-sources</id>
      <goals>
       <goal>jar-no-fork</goal>
      </goals>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>2.10.4</version>
    <configuration>
     <source>8</source>
     <excludePackageNames>pro.projo.$template</excludePackageNames>
    </configuration>
    <executions>
     <execution>
      <id>attach-javadocs</id>
      <goals>
       <goal>jar</goal>
      </goals>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <artifactId>maven-gpg-plugin</artifactId>
    <version>1.6</version>
    <executions>
     <execution>
      <id>sign-artifacts</id>
      <phase>verify</phase>
      <goals>
       <goal>sign</goal>
      </goals>
     </execution>
    </executions>
   </plugin>
   <plugin>
    <groupId>org.sonatype.plugins</groupId>
    <artifactId>nexus-staging-maven-plugin</artifactId>
    <version>1.6.7</version>
    <extensions>true</extensions>
    <configuration>
     <serverId>central</serverId>
     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
     <autoReleaseAfterClose>false</autoReleaseAfterClose>
    </configuration>
   </plugin>
  </plugins>
  <pluginManagement>
   <plugins>
    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.6.0</version>
     <configuration>
      <source>1.8</source>
      <target>1.8</target>
     </configuration>
    </plugin>
    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-resources-plugin</artifactId>
     <version>2.7</version>
    </plugin>
   </plugins>
  </pluginManagement>
 </build>

 <dependencies>
  <dependency>
   <groupId>javax.annotation</groupId>
   <artifactId>javax.annotation-api</artifactId>
   <version>1.3.2</version>
  </dependency>
  <dependency>
   <groupId>junit</groupId>
   <artifactId>junit</artifactId>
   <version>4.12</version>
   <scope>test</scope>
  </dependency>
 </dependencies>

 <dependencyManagement>
  <dependencies>
  </dependencies>
 </dependencyManagement>

</project>
